# hoverclock

./: .clang-format  .gitignore  .gitmodules  Makefile  README.md  meson.build  suppression.supp
source/: color.c  color.h  display_server.c  display_server.h  hoverclock.h  hoverclock_settings.c  hoverclock_settings.h  hoverclock_time_date.c  hoverclock_time_date.h  hoverclock_types.h  label.c  label.h  main.c  rectangle.h  settings.c  settings.h  surface.c  surface.h  widget.h  window.c  window.h
source/platform/linux/xcb/: hoverclock_xcb.c  hoverclock_xcb.h
subprojects/insight/: .clang-format  README.md  meson.build
subprojects/insight/include/: insight.h
subprojects/insight/source/: insight.c
subprojects/inthreadval/: .clang-format  README.md  meson.build
subprojects/inthreadval/include/: inthreadval.h
subprojects/inthreadval/source/: inthreadval.c
subprojects/vault/: LICENSE  README.md  meson.build
subprojects/vault/include/: vault.h
subprojects/vault/source/: vault.c
